--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -41,7 +41,11 @@
     font-size: 2.2rem;
     letter-spacing: .2rem;
 }
-
+@media (max-width: 1440px) {
+    .b {
+        font-size: 1.6rem;
+    }
+  }
 
 .bloom-title {
     text-decoration: none;
