--- a/react-app/src/components/Search/search.css
+++ b/react-app/src/components/Search/search.css
@@ -1,9 +1,6 @@
 .searchPage {
-    height: 460px;
-    width: 723px;
-    position: absolute;
-    top: 20px;
-    right: 570px;
+    width: 100%;
+    height: 100%;
     z-index: -1;
     animation: fadeIn 1s;
     display: flex;
@@ -18,7 +15,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 15px;
+    margin-top: 100px;
 }
 
 .searchBar button {
@@ -39,26 +36,13 @@
 }
 
 .input-container input::placeholder {
+    width: 100%;
     color: #6289bd;
-}
-
-.slide-ani {
-    animation: slide-input 1s forwards;
-}
-
-@keyframes slide-input {
-    0%{
-        width: 200px;
-    }
-    100% {
-        width: 455px;
-    }
 }
 
 .searchIcon {
     color:  #6289bd;
     font-size: 25px;
-    position: absolute;
     top: 20px;
     left: 440px;
 }
@@ -66,25 +50,11 @@
 .icon-slider {
     color:  #6289bd;
     font-size: 25px;
-    position: absolute;
-    top: 20px;
-    left: 470px;
-    animation: icon-slide 1s forwards;
-}
-
-@keyframes icon-slide {
-    0% {
-        left: 470px;
-    }
-    100% {
-        left: 500px;
-    }
 }
 
 .circle {
-    width: 550px;
-    height: 450px;
-    position: absolute;
+    width: 30%;
+    height: 50%;
     /* background-color: rgb(206, 206, 206); */
     background-color: white;
     top: 65px;
@@ -165,7 +135,7 @@
 
 .link-content {
     text-decoration: none;
-    color: white;
+    color: black;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
