--- a/react-app/src/components/Search/search.css
+++ b/react-app/src/components/Search/search.css
@@ -15,7 +15,6 @@
     justify-content: center;
     flex-direction: row;
     margin: 10px;
-
 }
 
 .searchBar button {
@@ -62,12 +61,17 @@
 .search-box {
     width: 30%;
     height: 60%;
-    /* background-color: rgb(206, 206, 206); */
     background-color: white;
     animation: fadeIn 1s;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, .3);
     margin-top: 100px;
 }
+@media (max-width: 1440px) {
+    .search-box {
+        width: 35%;
+        height: 65%;
+    }
+  }
 
 .link-container {
     margin: 15px;
