--- a/react-app/src/components/Templates/BackgroundImageCarousel/backImg.css
+++ b/react-app/src/components/Templates/BackgroundImageCarousel/backImg.css
@@ -39,11 +39,13 @@
 .center-l {
     height: 600px;
     width: 1100px;
+
+
 }
 @media (max-width: 1440px) {
     .center-l {
         height: 500px;
-        width: 1000px
+        width: 1000px;
     }
 }
 
